<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.smartparking.fragments.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_bookings"
        android:name="com.smartparking.fragments.BookingsFragment"
        android:label="@string/menu_bookings"
        tools:layout="@layout/fragment_bookings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.smartparking.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.smartparking.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>